--- a/rayrayray.vcxproj.filters
+++ b/rayrayray.vcxproj.filters
@@ -38,6 +38,12 @@
     <None Include="fragment.glsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="post_frag.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="post_vert.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
